Fix hero section alignment

--- a/client/src/component/HeroSection/HeroSection.css
+++ b/client/src/component/HeroSection/HeroSection.css
@@ -17,6 +17,12 @@
 }
 .skills-list {
   display: flex;
+  padding-left: 15px;
+}
+
+.skill-menu-app{
+  margin-left: 15px;
+  list-style-type: circle;
 }
 .social-media-list {
   display: flex;
